[gd_scene load_steps=9 format=3 uid="uid://ruqng3at364b"]

[ext_resource type="Script" path="res://Scripts/Player/player.gd" id="1_8w667"]
[ext_resource type="Texture2D" uid="uid://18who81swic4" path="res://Assets/Art/player_drawing.png" id="2_l5pje"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iuwjs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_13jbj"]
radius = 136.235

[sub_resource type="Animation" id="Animation_gnx7a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ilhx2"]
resource_name = "Movement"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="Animation" id="Animation_7pxxg"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_25obr"]
_data = {
"Idle": SubResource("Animation_7pxxg"),
"Movement": SubResource("Animation_ilhx2"),
"RESET": SubResource("Animation_gnx7a")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_8w667")
speed = 600

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_l5pje")
hframes = 2
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(6, 6)
shape = SubResource("RectangleShape2D_iuwjs")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.75, 0.75)
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_13jbj")

[node name="Label" type="Label" parent="."]
offset_left = -736.0
offset_top = -408.0
offset_right = -696.0
offset_bottom = -385.0
scale = Vector2(2, 2)

[node name="Label2" type="Label" parent="."]
offset_left = 576.0
offset_top = -408.0
offset_right = 616.0
offset_bottom = -385.0
scale = Vector2(2, 2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_25obr")
}
autoplay = "Idle"

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
